--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     ></script>
     <!-- Bootstrap -->
 
-    <title>React App</title>
+    <title>Portfolio </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
